--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- 반응형 필수 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">d
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>홈</title>
 
@@ -38,8 +38,6 @@
 </head>
 <body>
 
-<!-- 공통 내비 + 로그인 모달 프래그먼트 삽입 -->
-<div th:replace="common/common-nav :: commonNav"></div>
 
 <div class="container">
 
