--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -152,7 +152,12 @@ a{text-decoration:none}
       <div class="row">
         <div class="brand">동구라미 온</div>
         <div class="menu"><a href="/trash/reportPage">지도</a><a href="#">참여</a><a href="#">센터</a><a href="#">정보</a></div>
-        <div class="login"><a href="/user/login">로그인</a></div>
+        <div class="login">
+            <a th:if="${#strings.isEmpty(session.user_id)}" th:href="@{/user/login}">로그인</a>
+            <!-- 로그인 후만 보이기 -->
+            <a th:unless="${#strings.isEmpty(session.user_id)}" th:href="@{/user/myPage}">내 정보</a>
+
+        </div>
       </div>
       <div class="search-wrap">
         <div class="search-pill">
@@ -228,7 +233,12 @@ a{text-decoration:none}
     <div class="row">
       <div class="web-brand">동구라미 온</div>
       <nav class="web-nav"><a href="/trash/reportPage">지도</a><a href="#">참여</a><a href="#">센터</a><a href="#">정보</a></nav>
-      <a class="web-login" href="/user/login">로그인</a>
+        <!-- 로그인 전만 보이기 -->
+        <a th:if="${#strings.isEmpty(session.user_id)}" th:href="@{/user/login}">로그인</a>
+
+        <!-- 로그인 후만 보이기 -->
+        <a th:unless="${#strings.isEmpty(session.user_id)}" th:href="@{/user/myPage}">내 정보</a>
+        >
     </div>
   </header>
 
