--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -29,7 +29,7 @@
                 </button>
             </div>
             <div id="loginPage">
-                <form id="loginForm">
+                <form id="loginForm" action="/user/loginProc" method="post">
                     <div class="form-group">
                         <label for="email">아이디</label> <input name="user_id" id="user_id"
                                                               class="form-control" placeholder="enter your ID">
@@ -39,8 +39,7 @@
                                                                   name="user_pwd" id="user_pwd" class="form-control"
                                                                   placeholder="enter your passsword">
                     </div>
-                    <input name="login" class="btn btn-block login-btn" type="button"
-                           value="Login" onclick="loginProc();">
+                    <button type="submit">로그인</button>
                 </form>
             </div>
 
@@ -182,29 +181,7 @@
         button_b.disabled = true;
     }
 </script>
-<script>
-    function loginProc() {
 
-        var user_id = document.getElementById("user_id").value;
-        var user_pwd =document.getElementById("user_pwd").value;
-
-        $.ajax({
-            url: "/user/loginProc",
-            type: "POST",
-            data: {"user_id": user_id, "user_pwd": user_pwd},
-            success: function (result) {
-                if(result === "success"){
-                    window.location = "/";
-                } else {
-                    alert("로그인 실패");
-                }
-            },
-            error: function (e) {
-                alert('이미 존재하는 아이디입니다.');
-            }
-        });
-    }
-</script>
 <script>
     function checkId() {
         console.log('gello')
