--- a/src/main/resources/templates/trash/report.html
+++ b/src/main/resources/templates/trash/report.html
@@ -6,7 +6,7 @@
   <title>쓰레기 해결 • Kakao Map (춘천)</title>
 
   <!-- Live Server일 때 -->
-  <script src="../../static/js/config.local.js"></script>
+  <script src="/js/config.local.js"></script>
   <!-- Spring Boot로 구동 시 ↑를 /js/config.local.js 로 바꾸세요 -->
 
   <!-- Kakao SDK 동적 로더 (한 번만 초기화) -->
